--- a/src/assets/css/clear.less
+++ b/src/assets/css/clear.less
@@ -121,8 +121,10 @@ textarea {
 a {
   text-decoration: none;
   cursor: pointer;
+  font-size: 0.14rem;
 }
 html,
 body {
   height: 100%;
+  color: #333;
 }
