--- a/src/assets/css/page.less
+++ b/src/assets/css/page.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  color: #e7e7e7;
+  font-size: 0.14rem;
   .main-wrap{
     flex: 1 0 auto;
   }
